minor edits footer
- added url to logo
- removed jquery slim local instance link

--- a/10x/index.html
+++ b/10x/index.html
@@ -180,7 +180,7 @@
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
                 <div class="col-12 col-md">
-                    <img class="mb-2" src="./img/made-by-loogart.svg" alt="logo-loogart" height="64">
+                    <a href="http://loogart.com" target="_blank"><img class="mb-2" src="./img/made-by-loogart.svg" alt="logo-loogart" height="64"></a>
                     <small class="d-block mb-3 text-muted">&copy; 2011-2018</small>
                 </div>
                 <div class="col-6 col-md">
@@ -216,10 +216,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>
-        window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')
-
-    </script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./holder.min.js"></script>
