--- a/10x/index.html
+++ b/10x/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 box-shadow text-white" style="background-color:#111">
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-0 box-shadow text-white nav-sticky" style="background-color:#111;">
         <h5 class="my-0 mr-md-auto font-weight-normal"><b>10<span style="color:red">X</span> DEALS</b> from <a href="http://loogart.com" target="_blank" style="color:#F55B5A!important"><b style="color:#F55B5A">Loogart</b></a></h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-white" href="#loogmoji">Loogmoji</a>
