updated loogmoji links
from website to 10x site

--- a/10x/index.html
+++ b/10x/index.html
@@ -44,7 +44,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Grant Cardone</h2>
                         <p>Grant loves his <a href="#loogmojiPrices" style="color:#F55B5A!important">Fine Art Loogmoji</a> <br>and invited Loogart to feature their work the 10X Growth Conference.</p>
-                        <a href="#loogmojiPrices" class="btn btn-lg btn-primary">Create yours today</a>
+<!--                        <a href="#loogmojiPrices" class="btn btn-lg btn-warning">Create yours today</a>-->
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -52,7 +52,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Tai Lopez</h2>
                         <p>Tai received a <a href="#loogmojiPrices" style="color:#F55B5A!important">Fine Art Loogmoji</a> <br>at the 10X Growth Conference in Las Vegas.</p>
-                        <a href="#loogmojiPrices" class="btn btn-warning">Buy now</a>
+<!--                        <a href="#loogmojiPrices" class="btn btn-warning">Buy now</a>-->
                     </div>
                 </div>
                 <div class="carousel-item">
