--- a/10x/index.html
+++ b/10x/index.html
@@ -31,7 +31,7 @@
 
     <section id="loogmoji">
         <!--        <img class="img-fluid img-banner" src="./img/grant-cardone-loogmoji-live_2.jpg">-->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="hover">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
