--- a/html/navbar.html
+++ b/html/navbar.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="./"><p>Loogart</p><span class="logo-loogart"></span></a>
+            <a class="navbar-brand" href="portfolio"><p>Loogart</p><span class="logo-loogart"></span></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
