--- a/exclusive-wallpapers.html
+++ b/exclusive-wallpapers.html
@@ -47,7 +47,7 @@
                 <div class="col-sm-8">
                     <h4 style="color:#F75A56">Unlock Your Phone's Personality with</h4>
                     <h1 style="margin-top:0;color:white">✨ Exclusive Loogmoji Wallpapers!</h1>
-                    <p style="color:white">Enter your email address below to unlock instant access to the Loogmoji wallpaper collection. <br>✅ You'll be added to my exclusive email list and be the first to know about future releases⚡️ and exciting drops 📦.</p>        
+                    <p style="color:white">Enter your email address below to unlock instant access to the Loogmoji wallpaper collection. <br>You'll be added to my exclusive email list and be the first to know about future releases⚡️, exciting drops 📦 and new product 📢 announcements.</p>        
                     <script async data-uid="339786c938" src="https://loogart.ck.page/339786c938/index.js"></script>
                                     
                 </div>
