--- a/prototype/index.html
+++ b/prototype/index.html
@@ -7,7 +7,6 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-
     <title>MONtréal Prototype</title>
     <script>
       window.onload = function () {
@@ -89,6 +88,15 @@
           buildArtwork(); // Rebuild the canvas with random squares
         }
 
+        // Function to download the canvas as a PNG
+        function downloadPNG() {
+          var canvas = document.getElementById('canvas');
+          var link = document.createElement('a');
+          link.download = 'MONtréal-artwork.png';
+          link.href = canvas.toDataURL();
+          link.click();
+        }
+
         // On page load, set default artworks and build the initial canvas
         selectedArtworks = [
           artworks[0],
@@ -98,14 +106,15 @@
         ];
         buildArtwork();
 
-        // Attach remix functionality to the button
+        // Attach remix and download functionality to the buttons
         document.getElementById('remix').addEventListener('click', remix);
+        document.getElementById('download').addEventListener('click', downloadPNG);
       }
     </script>
 
     <style>
-      body{
-        min-height:100vh;
+      body {
+        min-height: 100vh;
         background: linear-gradient(45deg, #FF7900 0%, #FF2022 100%);
         background-size: 100%;
         background-repeat: no-repeat;
@@ -131,10 +140,13 @@
             <!-- Canvas with artwork -->
             <div class="canvas-styling">
               <canvas id="canvas" class="d-block w-100"></canvas>
-            </div>
-            <button id="remix" class="btn btn-lg btn-block btn-outline-light mt-5">🪄 REMIX</button>
+            </div>          
+            
           </div>
-
+          <div class="d-flex justify-content-center gap-3 mt-5 flex-wrap">
+            <button id="remix" class="btn btn-lg btn-outline-light">🪄 REMIX</button>
+            <button id="download" class="btn btn-lg btn-outline-light">⬇️ Download PNG</button>
+          </div>
         </div>
       </div>
     </section>
